DuPont DevSB/src/objects/Costing__c.object
<CustomObject>
    <description>The object holds the key field necessary for costing and miscellaneous adjustments.</description>
    <fields>
        <fullName>FF_PSA_Additional_comments__c</fullName>
        <label>Additional comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Amount__c</fullName>
        <description>Amount field to be used to store the costing related values for example: IP&amp; Licensing Cost etc</description>
        <inlineHelpText>Amount field to be used to store the costing related values for example: IP&amp; Licensing Cost etc</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Contg_TAX_Desc__c</fullName>
        <description>Description of the tax/Contingency entered</description>
        <inlineHelpText>Description of the tax/Contingency entered</inlineHelpText>
        <label>Contingency/Tax Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Contg_Tax__c</fullName>
        <description>Percent of the tax, Contingency and T&amp;L Cost entered</description>
        <inlineHelpText>Percent of the tax, Contingency and T&amp;L Cost entered</inlineHelpText>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Contingency_Risk__c</fullName>
        <description>Defined set of risks and Suggested contingency percentages associated.</description>
        <inlineHelpText>Defined set of risks and Suggested contingency percentages associated.</inlineHelpText>
        <label>Contingency Risk</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FF_PSA_Cost_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adhoc Risk</fullName>
                </value>
                <value>
                    <fullName>Standard -- 3%</fullName>
                </value>
                <value>
                    <fullName>Simple Assesment or Training -- 0%</fullName>
                </value>
                <value>
                    <fullName>Multi-Site Project -- 3%</fullName>
                </value>
                <value>
                    <fullName>First of a Kind Project -- 15%</fullName>
                </value>
                <value>
                    <fullName>Multi Cultural Client Shift -- 5%</fullName>
                </value>
                <value>
                    <fullName>Remote Locations -- 3%</fullName>
                </value>
                <value>
                    <fullName>Extreme Weather Conditions -- 3%</fullName>
                </value>
                <value>
                    <fullName>Potential Discount Request by Purchasing -- 3%</fullName>
                </value>
                <value>
                    <fullName>Client Delays(Rescheduled/People/Cash) -- 3%</fullName>
                </value>
                <value>
                    <fullName>State-Owned/Government Companies -- 5%</fullName>
                </value>
                <value>
                    <fullName>High Currency Fluctuation -- 5%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Cost_Type__c</fullName>
        <description>The type of other cost as selected by the user will be rolled up into Project.</description>
        <inlineHelpText>The type of other cost as selected by the user will be rolled up into Project.</inlineHelpText>
        <label>Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contingency</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>T&amp;L Cost</fullName>
                </value>
                <value>
                    <fullName>Additional Termination Cost</fullName>
                </value>
                <value>
                    <fullName>MultiCurrency Cost</fullName>
                </value>
                <value>
                    <fullName>Other Costs</fullName>
                </value>
                <value>
                    <fullName>Resource Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FF_PSA_HoldOver_Cost__c</fullName>
        <label>Total HoldOver Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Is_Resource_Cost_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resource Cost Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FF_PSA_No_of_Holdover_Hours__c</fullName>
        <label>No of Holdover Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_No_of_Training_Hours__c</fullName>
        <label>No of Training Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_No_of_Travel_Hours__c</fullName>
        <label>No of Travel Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_No_of_Work_Hours__c</fullName>
        <label>No of Work Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Costings_del1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>pse__Rate_Card__c</referenceTo>
        <relationshipLabel>Other Additional Costs</relationshipLabel>
        <relationshipName>Other_Additional_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Rating__c</fullName>
        <label>Required Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Limited Exposure</fullName>
                </value>
                <value>
                    <fullName>2 - Some Familiarity</fullName>
                </value>
                <value>
                    <fullName>3 - Comfortable</fullName>
                </value>
                <value>
                    <fullName>4 - Strong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Resource_Role__c</fullName>
        <label>Resource Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Mgr</fullName>
                </value>
                <value>
                    <fullName>Account Mgr Principal</fullName>
                </value>
                <value>
                    <fullName>Account Mgr Senior</fullName>
                </value>
                <value>
                    <fullName>BDM</fullName>
                </value>
                <value>
                    <fullName>BDM JUNIOR</fullName>
                </value>
                <value>
                    <fullName>BDM PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>BDM Senior</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT ASSOCIATE</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT SENIOR</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT TRAINER</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - Production</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - Production Leader</fullName>
                </value>
                <value>
                    <fullName>Market/ Regional Leader</fullName>
                </value>
                <value>
                    <fullName>Other - Business Functions</fullName>
                </value>
                <value>
                    <fullName>Practice Leader</fullName>
                </value>
                <value>
                    <fullName>Practice SME</fullName>
                </value>
                <value>
                    <fullName>PROJECT CONTROLLER</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER SENIOR</fullName>
                </value>
                <value>
                    <fullName>PROJECT SUPPORT</fullName>
                </value>
                <value>
                    <fullName>SCHEDULER</fullName>
                </value>
                <value>
                    <fullName>Senior Consultant</fullName>
                    <isActive>false</isActive>
                    <label>Senior Consultant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Skill_Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill / Certification</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Other Additional Costs</relationshipLabel>
        <relationshipName>Other_Additional_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Tax_Seq__c</fullName>
        <description>The types of taxes that can entered against each project.</description>
        <inlineHelpText>The types of taxes that can entered against each project.</inlineHelpText>
        <label>Tax</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tax1</fullName>
                </value>
                <value>
                    <fullName>Tax2</fullName>
                </value>
                <value>
                    <fullName>Tax3</fullName>
                </value>
                <value>
                    <fullName>Tax4</fullName>
                </value>
                <value>
                    <fullName>Tax5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Total_Resource_Cost__c</fullName>
        <formula>FF_PSA_Work_Cost__c + FF_PSA_Travel_Cost__c + FF_PSA_Training_Cost__c + FF_PSA_HoldOver_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Resource Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Training_Cost__c</fullName>
        <label>Total Training Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Travel_Cost__c</fullName>
        <label>Total Travel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Work_Cost__c</fullName>
        <label>Total Work Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Region__c.pse__Hierarchy_Depth__c</field>
                <operation>equals</operation>
                <value>3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Other Additional Costs</relationshipLabel>
        <relationshipName>Other_Additional_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Other Additional Costs</label>
    <nameField>
        <displayFormat>OAC-{0000}</displayFormat>
        <label>OACOST</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Additional Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>